--- a/index.html
+++ b/index.html
@@ -619,6 +619,13 @@
             }
         }
 
+        /* Hide menu toggle on desktop */
+        @media (min-width: 993px) {
+            .menu-toggle {
+                display: none !important;
+            }
+        }
+
         /* Telegram specific styles */
         .tg-mobile .menu-toggle {
             display: flex !important;
@@ -845,15 +852,9 @@
             let tg = window.Telegram.WebApp;
 
             if (tg.initDataUnsafe && tg.initDataUnsafe.user) {
-                // Adjust UI for Telegram
                 document.body.classList.add('tg-mobile');
                 document.body.style.paddingTop = '0';
                 document.querySelector('.container').style.minHeight = 'calc(100vh - 0px)';
-
-                // Only hide menu toggle if we're not in mobile view
-                if (window.innerWidth > 992) {
-                    document.getElementById('menu-toggle').style.display = 'none';
-                }
 
                 // Handle back button
                 tg.BackButton.show();
