--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@
             }
         }
 
-        /* Hide menu toggle on desktop */
-        @media (min-width: 993px) {
+        /* Hide menu toggle on desktop and large screens */
+        @media (min-width: 993px), (min-height: 500px) {
             .menu-toggle {
                 display: none !important;
             }
@@ -657,7 +657,7 @@
             }
         }
 
-        @media (max-width: 992px) {
+        @media (max-width: 992px) and (max-height: 500px) {
             .container {
                 grid-template-columns: 1fr;
             }
@@ -878,7 +878,7 @@
             // Adjust viewport for mobile
             function adjustViewport() {
                 const viewportMeta = document.querySelector('meta[name="viewport"]');
-                if (window.innerWidth <= 768 || (window.Telegram && window.Telegram.WebApp.platform !== 'unknown')) {
+                if (window.innerWidth <= 768 || (window.Telegram && window.Telegram.WebApp.platform !== 'unknown' && window.innerHeight <= 500)) {
                     viewportMeta.setAttribute('content', 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no');
                 } else {
                     viewportMeta.setAttribute('content', 'width=device-width, initial-scale=1.0');
@@ -1272,14 +1272,14 @@
             // Event handlers
             generateBtn.addEventListener("click", () => {
                 generateRandomSignal(false);
-                if (window.innerWidth <= 992) {
+                if (window.innerWidth <= 992 && window.innerHeight <= 500) {
                     sidebar.classList.remove("active");
                 }
             });
 
             aiGenerateBtn.addEventListener("click", () => {
                 generateRandomSignal(true);
-                if (window.innerWidth <= 992) {
+                if (window.innerWidth <= 992 && window.innerHeight <= 500) {
                     sidebar.classList.remove("active");
                 }
             });
@@ -1288,8 +1288,9 @@
             function handleResize() {
                 const menuToggle = document.getElementById('menu-toggle');
                 const sidebar = document.getElementById('sidebar');
-
-                if (window.innerWidth <= 992) {
+                
+                // Show menu toggle only on small screens with small height (mobile devices)
+                if (window.innerWidth <= 992 && window.innerHeight <= 500 && document.body.classList.contains('tg-mobile')) {
                     menuToggle.style.display = 'flex';
                     if (!sidebar.classList.contains('active')) {
                         sidebar.classList.remove('active');
